src/parse/snapshots/camello__parse__tests__statements__success__named_sub_empty_attribute.pl.snap
---
source: src/parse/tests.rs
expression: rendered
---
ROOT
  SUB_DEF
    `sub` "sub"
    SUB_NAME
      identifier "foo"
    ATTR
      `:` ":"
    BLOCK
      `{` "{"
      `}` "}"
