src/parse/snapshots/camello__parse__tests__statements__success__postfix_when_in_given.pl.snap
---
source: src/parse/tests.rs
expression: rendered
---
ROOT
  GIVEN_STMT
    `given` "given"
    PAREN_EXPR
      `(` "("
      LIST_EXPR
        SCALAR_VAR
          `$` "$"
          identifier "value"
      `)` ")"
    BLOCK
      `{` "{"
      EXPR_STMT
        LIST_EXPR
          LIST_CALL_EXPR
            SUB_NAME
              identifier "say"
            LIST_EXPR
              LITERAL
                string literal "\"It's an even number\""
        STMT_MODIFIER
          `when` "when"
          LIST_EXPR
            BINARY_EXPR
              BINARY_EXPR
                SCALAR_VAR
                  `$` "$"
                  identifier "_"
                `%` "%"
                LITERAL
                  number "2"
              `==` "=="
              LITERAL
                number "0"
        `;` ";"
      `}` "}"
