src/parse/snapshots/camello__parse__tests__statements__success__semicolon_valid_block_last_statement.pl.snap
---
source: src/parse/tests.rs
expression: rendered
---
ROOT
  SUB_DEF
    `sub` "sub"
    SUB_NAME
      identifier "test"
    BLOCK
      `{` "{"
      EXPR_STMT
        LIST_EXPR
          CALL_EXPR
            SUB_NAME
              identifier "foo"
            ARG_LIST
              `(` "("
              LIST_EXPR
              `)` ")"
        `;` ";"
      EXPR_STMT
        LIST_EXPR
          CALL_EXPR
            SUB_NAME
              identifier "bar"
            ARG_LIST
              `(` "("
              LIST_EXPR
              `)` ")"
      `}` "}"
