src/parse/snapshots/camello__parse__tests__statements__success__semicolon_valid_data_section.pl.snap
---
source: src/parse/tests.rs
expression: rendered
---
ROOT
  EXPR_STMT
    LIST_EXPR
      CALL_EXPR
        SUB_NAME
          identifier "foo"
        ARG_LIST
          `(` "("
          LIST_EXPR
          `)` ")"
  DATA_SECTION
    `__DATA__` "__DATA__"
